[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/UI/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/GUI.gd" type="Script" id=2]
[ext_resource path="res://src/UI/img/pixil-frame-0 (1).png" type="Texture" id=3]
[ext_resource path="res://src/UI/img/pixil-frame-0 (2).png" type="Texture" id=4]
[ext_resource path="res://src/UI/PixelTheme.tres" type="Theme" id=6]
[ext_resource path="res://src/UI/DeathMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UI/Counter.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/UI/img/x_w.png" type="Texture" id=9]
[ext_resource path="res://src/UI/img/x_b.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.278431, 0.411765, 0.54902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
shadow_color = Color( 0, 0, 0, 0.403922 )
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0313726, 0.180392, 0.329412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 0, 0, 0, 0.403922 )
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0.258824, 0.439216, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 0, 0, 0, 0.403922 )
shadow_offset = Vector2( 5, 5 )

[sub_resource type="CircleShape2D" id=13]
radius = 64.0

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 13.0 ]
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
margin_right = -50.0
margin_bottom = 40.0

[node name="PauseBtn2" type="Button" parent="Control/HBoxContainer"]
margin_top = 9.0
margin_right = 192.0
margin_bottom = 73.0
rect_min_size = Vector2( 192, 64 )
size_flags_vertical = 4
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 1 )
text = "Pause"

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_left = 864.0
margin_right = 946.0
margin_bottom = 82.0
size_flags_horizontal = 10

[node name="Score" type="Label" parent="Control/HBoxContainer/VBoxContainer3"]
margin_right = 82.0
margin_bottom = 37.0
size_flags_horizontal = 8
size_flags_vertical = 5
text = "  Score: "

[node name="Health" type="Label" parent="Control/HBoxContainer/VBoxContainer3"]
margin_left = 14.0
margin_top = 41.0
margin_right = 82.0
margin_bottom = 78.0
size_flags_horizontal = 10
size_flags_vertical = 5
text = "Health:"

[node name="VBoxContainer4" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_left = 950.0
margin_right = 974.0
margin_bottom = 82.0
size_flags_horizontal = 8

[node name="ScoreCounter" parent="Control/HBoxContainer/VBoxContainer4" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 39.0
size_flags_horizontal = 8

[node name="HealthCounter" parent="Control/HBoxContainer/VBoxContainer4" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 43.0
margin_right = 24.0
margin_bottom = 82.0

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control"]
position = Vector2( 68, 404 )
normal = ExtResource( 3 )
shape = SubResource( 13 )

[node name="InnerCircle" type="Sprite" parent="Control"]
visible = false
position = Vector2( 120, 483 )
texture = ExtResource( 4 )

[node name="FireBtn" type="TouchScreenButton" parent="Control"]
position = Vector2( 883, 462 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
action = "ui_accept"

[node name="DeathMenu" parent="." instance=ExtResource( 7 )]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource( 1 )]
pause_mode = 2

[connection signal="pressed" from="Control/HBoxContainer/PauseBtn2" to="." method="_on_PauseBtn_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/PauseBtn2" to="PauseMenu" method="_on_PauseBtn_pressed"]
[connection signal="game_is_over" from="DeathMenu" to="." method="_on_DeathMenu_game_is_over"]
